bringing into the intro

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -157,7 +157,7 @@ This chapter centres on an interpretation of the implementation of game design p
 
 _Recap on design patterns and game design patterns_
 
-In chapter two the use of design patterns in an education context were summarised. Design patterns provide a relatable contextual basis for learning complex code structures. More specifically, game design patterns they have been used in educational settings. In the work of Repenning and colleagues [@repenning_scalable_2015; @basawapatna_using_2010] GDPs are framed as science simulation concepts that aid transfer of concepts to similar setting. Eriksson and colleagues [-@eriksson_using_2019] draw on catalogue of GDPs can provide a useful basis for co-design work to help deepen the knowledge of participants and provide a shared language to help collaborative design.
+In chapter two the use of design patterns in an education context were summarised as a relatable contextual basis for learning complex code structures. More specifically, game design patterns they have been used in educational settings to aid aid transfer of science simulation concepts to other settings [@repenning_scalable_2015; @basawapatna_using_2010] and to provide a useful basis for co-design work to help deepen the knowledge of participants and provide a shared language to help collaborative design [@eriksson_using_2019].
 
 
   <!-- -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
@@ -166,7 +166,16 @@ In chapter two the use of design patterns in an education context were summarise
 
 _Identifying GDPs as a germ cell/ unit of analysis_
 
-The last chapter explored the mutual evolution of the learning design, shaped by direct input, explicit requests and the implicit needs of the community and resulting feedback. The leading activity of iteratively of altering a game at the level of gameplay design pattern which emerged from this experimental process.  This chapter develops analysis of the role of GDPs as a guiding process for supporting resources and support processes in varied forms. These include a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification.
+The last chapter explored the mutual evolution of the learning design, shaped by direct input, explicit requests and the implicit needs of the community and resulting feedback.
+
+
+
+The leading activity of iteratively of altering a game at the level of gameplay design pattern which emerged from this experimental process.
+
+This chapter develops analysis of the role of GDPs as a mediational strategies in varied forms including;  supporting resources, provided support processes and naturally emerging practices.
+
+BREAK DOWN?
+These include a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification.
 
 While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through the use of game design patterns via varied means. These include: use as part of meditational strategies by participants and facilitators and as shared objects between participants, facilitators and peers (as explored in chapter three and four).
 
