edits on fok foi etc

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -15,21 +15,34 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
     -   [Research Questions - March
         2024](#research-questions---march-2024)
     -   [Chapter outline](#chapter-outline)
-    -   [On GDP as a germ-cell and unit of analysis recap of design
-        patterns](#on-gdp-as-a-germ-cell-and-unit-of-analysis-recap-of-design-patterns)
-        -   [Recap on design patterns and game design
-            patterns](#recap-on-design-patterns-and-game-design-patterns)
-        -   [On the utility of identifying a germ cell/ unit of
-            analysis](#on-the-utility-of-identifying-a-germ-cell-unit-of-analysis)
-    -   [Study of Vignette A](#study-of-vignette-a)
+    -   [Study of Vignette 2](#study-of-vignette-2)
         -   [Descriptive Commentary on Vignette
-            A](#descriptive-commentary-on-vignette-a)
+            2](#descriptive-commentary-on-vignette-2)
     -   [Observations and analysis of use of Game Design Patterns (GDPs)
         by
         participants](#observations-and-analysis-of-use-of-game-design-patterns-gdps-by-participants)
-    -   [The role of GDPs in the personal appropriation of
-        computational, design and systems
-        concepts](#the-role-of-gdps-in-the-personal-appropriation-of-computational-design-and-systems-concepts)
+    -   [Cultural Dimension](#cultural-dimension)
+        -   [The role of GDPs to facilitate learners to design for
+            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+            -   [The use of GDPs (especially during playtesting) can aid
+                the process of imagining the end user
+                experiences](#the-use-of-gdps-especially-during-playtesting-can-aid-the-process-of-imagining-the-end-user-experiences)
+            -   [Other examples and interpretation on designing for
+                others / shifts of
+                perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
+        -   [GDP concepts and language used in informal feedback for
+            peers to influence modification of
+            games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
+        -   [The propagation of use of GDPs - (through playtesting() IS
+            IT PLAYTESTING THAT IS IMPORTANT HERE - OR THE ROLE AND
+            NATURE OF GDPS TO AID
+            PROPAGATION](#the-propagation-of-use-of-gdps---through-playtesting-is-it-playtesting-that-is-important-here---or-the-role-and-nature-of-gdps-to-aid-propagation)
+        -   [GDPs facilitate the use of wider funds of
+            knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
+            -   [Family funds of knowledge in asset creation and game
+                design](#family-funds-of-knowledge-in-asset-creation-and-game-design)
+        -   [Perhaps add here a summary of cultural section if
+            useful](#perhaps-add-here-a-summary-of-cultural-section-if-useful)
     -   [GDPs used in the process of guided
         participation](#gdps-used-in-the-process-of-guided-participation)
         -   [GDPs offer the potential to assist project navigation,
@@ -70,42 +83,24 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
                 errors](#gdps-used-to-nurture-tactical-responses-to-coding-errors)
             -   [Concluding remarks on debugging and
                 revision](#concluding-remarks-on-debugging-and-revision)
-    -   [Cultural Dimension](#cultural-dimension)
-        -   [The role of GDPs to facilitate learners to design for
-            others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-            -   [Referring to GDPs (especially during playtesting) can
-                help scaffold the process of imagining the end user
-                experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.)
-            -   [GDPs, the scale/nature of project goals & designing for
-                others](#gdps-the-scalenature-of-project-goals-designing-for-others)
-            -   [Other examples and interpretation on designing for
-                others / shifts of
-                perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
-        -   [Role of playtesting and feedback and
-            GDPs](#role-of-playtesting-and-feedback-and-gdps)
-            -   [GDP concepts and language used in informal feedback for
-                peers to influence modification of
-                games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
-            -   [The propagation of use of GDPs through
-                playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
-        -   [GDPs facilitate the use of wider funds of
-            knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
-            -   [Family funds of knowledge](#family-funds-of-knowledge)
-            -   [Funds of knowledge from professional and enthusiast
-                communities](#funds-of-knowledge-from-professional-and-enthusiast-communities)
-    -   [Discussion on the use of game design patterns in the 3M
-        learning
-        design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
-        -   [Design patterns as a mid-level pedagogical
-            framework](#design-patterns-as-a-mid-level-pedagogical-framework)
-        -   [Discussion on GDPs, emerging processes and learner
-            agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
-            -   [GDPs used in mediational strategies and impact on
-                participant
-                agency](#gdps-used-in-mediational-strategies-and-impact-on-participant-agency)
+    -   [The role of GDPs in the personal appropriation of concepts and
+        processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
+    -   [Discussion](#discussion)
+        -   [Concrete and relatable levels of abstraction - linking this
+            communities experiences with existing
+            literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature)
+        -   [Design patterns as a intermediate-level, pedagogical
+            framework](#design-patterns-as-a-intermediate-level-pedagogical-framework)
+        -   [Implications and beginnings of suggestions for
+            practitioners - IS THIS FOR THE CONCLUSION? OR MERGE SOME
+            UP - WITHIN THE SECTION THAT THEY REFER
+            TO?](#implications-and-beginnings-of-suggestions-for-practitioners---is-this-for-the-conclusion-or-merge-some-up---within-the-section-that-they-refer-to)
             -   [Tensions between facilitating agency and norming
-                practices](#tensions-between-facilitating-agency-and-norming-practices)
+                practices - MOVE up OR COMPRESS INTO THIS CHAPTER - OR
+                AS A LINK TO NEXT CHAPTER IN CONCLUSION
+                ?](#tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter---or-as-a-link-to-next-chapter-in-conclusion)
     -   [Chapter Conclusion](#chapter-conclusion)
+        -   [Simple table of uses](#simple-table-of-uses)
         -   [Summary of the pedagogical opportunities of Game Design
             Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
         -   [Transition to next chapter](#transition-to-next-chapter)
@@ -379,7 +374,7 @@ The parent struggles to implement quite ambitious code challenges that she takes
 In ask/imagine stages parent and child are able  discuss storytelling, graphical and other aesthetic choices -->
 
 
-## Observations and analysis of use of Game Design Patterns (GDPs) by participants
+<!-- ## Observations and analysis of use of Game Design Patterns (GDPs) by participants -->
 
 <!-- NOTE:  this addresses HOW THESE FINDING ARE STRUCTURED. MOVE TO INTRO? -->
 
@@ -404,7 +399,7 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 
 
 
-#### The use of GDPs (especially during playtesting) can aid the process of imagining the end user experiences
+**The use of GDPs (especially during playtesting) can aid the process of imagining the end user experiences**
 
 
 
@@ -473,14 +468,14 @@ NOTE - cf Resnick Designing for Tinkerability - and the concepts in that.  -->
 <!-- We have explored in the literature review the value of design as a process, to see surrounding world as a designed experience [@ratto_critical_2011].
 AND SO? -->
 
-#### Other examples and interpretation on designing for others / shifts of perspective
+**Other examples and interpretation on designing for others / shifts of perspective**
 
 In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
 
 
 
 
-### GDP concepts and language used in informal feedback for peers to influence modification of games
+### GDP concepts and language used in informal feedback for peers to influence modification of games (developping community norms)
 
 
 
@@ -620,20 +615,20 @@ While Ed has only just been introduced to the ability to "cramp". He is happy an
 
 
 
-### GDPs facilitate the use of wider funds of knowledge
+### GDPs facilitate the use of wider funds of knowledge / interest
 
 **GDPs allow participants to share and explore their home and professional funds of knowledge and practices in the emerging learning community.**
 
-
-#### Family funds of knowledge in asset creation and game design
-
-In the last chapter outlined ways in which participants could to create their own graphical and audio assets and situated this process as a aligning with Cole's conception of surfacing a Funds of Interest).
-
-These findings support existing research on FoI as an inclusive educational practice and offer a rich description of a concrete example which aims to align to inclusive, practice-based frameworks like UDL and PBL.
+In the last chapter outlined ways in which participants could to create their own graphical and audio assets and situated this process as a aligning with Cole's conception of surfacing funds of interest.
 
 This process facilitated participants to bring their home and digital life interests into the game making process, a rich cultural source [Livingstone]. As outlined in literature [Gee / Ito & Scratch community] , graphical assets along with  via the use of the creation of game narratives), are motivating and sustain engagement.
 
 The process has parallels in enthusiast communities. For example, in new grounds, itch.io, Scratch communities, and specialist game art sites, the sharing of graphic
+
+Observations from video data in this study supports existing research on FoI as
+
+HERE OR IN DISCUSSION LATER ? OR NEXT CHAPTER.
+This has parallels with / can be considered an inclusive educational practice and offer a rich description of a concrete example which aims to align to inclusive, practice-based frameworks like UDL and PBL.
 
 _Funds of knowledge in games asset creation_
 
@@ -641,14 +636,6 @@ _Funds of knowledge in games asset creation_
 In some of the examples above we saw Molly and Nadine showing identification with graphical making process and the process of bringing it the game.  
 Beyond there internal family interaction, they share this artistic flair or attention to detail which is likely to be a part of their home funds of knowledge into the emerging learning community.
 CAN THIS BE LINKED TO FORMING IDENTITY WITHING THE COMMUNITY VIA A SPECIALISM? THERE IS DATA FROM AN INTERVIEW TO SUPPORT THIS.
-
-
-
-_Funds of knowledge from professional communities_
-
-A potential similar specialism was evident from Dave's guidance of Toby to access professional documentation, and engage in debugging processes using the developer tools section of the web browser. (See appendix 5.x). As a facilitator, this aligned with my previous work with Mozilla web clubs. The enthusiastic sharing of for messing around with technical web tools for learning and fun.
-
-This could have been picked up on and integrated into the design. While I did not do this, the confidence brought to the process to find resources from outside of teh walled garden of the provided resources prompted a change of game paradigm for another family who also made a top down / maze game in P3.
 
 _Funds of knowledge from home game playing experience_
 
@@ -658,6 +645,14 @@ LINK TO STATS from coding.
 
 
 A wider exploration of use of FOK in the programme related to art and narrative is explored in chapter six.
+
+
+_Funds of knowledge from professional communities_
+
+A potential similar specialism was evident from Dave's guidance of Toby to access professional documentation, and engage in debugging processes using the developer tools section of the web browser. (See appendix 5.x). As a facilitator, this aligned with my previous work with Mozilla web clubs. The enthusiastic sharing of for messing around with technical web tools for learning and fun.
+
+This could have been picked up on and integrated into the design. While I did not do this, the confidence brought to the process to find resources from outside of teh walled garden of the provided resources prompted a change of game paradigm for another family who also made a top down / maze game in P3.
+
 
 
 
