--- a/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-11-6-Gdps.md_toc.md
@@ -3,34 +3,28 @@
     -   [Research Questions - March
         2024](#research-questions---march-2024)
     -   [Chapter outline](#chapter-outline)
-    -   [On GDP as a germ-cell and unit of analysis recap of design
-        patterns](#on-gdp-as-a-germ-cell-and-unit-of-analysis-recap-of-design-patterns)
-        -   [Recap on design patterns and game design
-            patterns](#recap-on-design-patterns-and-game-design-patterns)
-        -   [Identifying GDPs as a germ cell/ unit of
-            analysis](#identifying-gdps-as-a-germ-cell-unit-of-analysis)
-    -   [Study of Vignette A](#study-of-vignette-a)
+    -   [Study of Vignette 2](#study-of-vignette-2)
         -   [Descriptive Commentary on Vignette
-            A](#descriptive-commentary-on-vignette-a)
+            2](#descriptive-commentary-on-vignette-2)
     -   [Observations and analysis of use of Game Design Patterns (GDPs)
         by
         participants](#observations-and-analysis-of-use-of-game-design-patterns-gdps-by-participants)
     -   [Cultural Dimension](#cultural-dimension)
-        -   [Role of playtesting and feedback and
-            GDPs](#role-of-playtesting-and-feedback-and-gdps)
-            -   [GDP concepts and language used in informal feedback for
-                peers to influence modification of
-                games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
-            -   [The propagation of use of GDPs through
-                playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
         -   [The role of GDPs to facilitate learners to design for
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-            -   [Referring to GDPs (especially during playtesting) can
-                help scaffold the process of imagining the end user
-                experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.)
+            -   [The use of GDPs (especially during playtesting) can aid
+                the process of imagining the end user
+                experiences](#the-use-of-gdps-especially-during-playtesting-can-aid-the-process-of-imagining-the-end-user-experiences)
             -   [Other examples and interpretation on designing for
                 others / shifts of
                 perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
+        -   [GDP concepts and language used in informal feedback for
+            peers to influence modification of
+            games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
+        -   [The propagation of use of GDPs - (through playtesting() IS
+            IT PLAYTESTING THAT IS IMPORTANT HERE - OR THE ROLE AND
+            NATURE OF GDPS TO AID
+            PROPAGATION](#the-propagation-of-use-of-gdps---through-playtesting-is-it-playtesting-that-is-important-here---or-the-role-and-nature-of-gdps-to-aid-propagation)
         -   [GDPs facilitate the use of wider funds of
             knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
             -   [Family funds of knowledge in asset creation and game
@@ -83,13 +77,16 @@
         -   [Concrete and relatable levels of abstraction - linking this
             communities experiences with existing
             literature](#concrete-and-relatable-levels-of-abstraction---linking-this-communities-experiences-with-existing-literature)
-        -   [Design patterns as a mid-level pedagogical
-            framework](#design-patterns-as-a-mid-level-pedagogical-framework)
+        -   [Design patterns as a intermediate-level, pedagogical
+            framework](#design-patterns-as-a-intermediate-level-pedagogical-framework)
         -   [Implications and beginnings of suggestions for
-            practitioners](#implications-and-beginnings-of-suggestions-for-practitioners)
+            practitioners - IS THIS FOR THE CONCLUSION? OR MERGE SOME
+            UP - WITHIN THE SECTION THAT THEY REFER
+            TO?](#implications-and-beginnings-of-suggestions-for-practitioners---is-this-for-the-conclusion-or-merge-some-up---within-the-section-that-they-refer-to)
             -   [Tensions between facilitating agency and norming
-                practices - MOVE up OR COMPRESS INTO THIS
-                CHAPTER](#tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter)
+                practices - MOVE up OR COMPRESS INTO THIS CHAPTER - OR
+                AS A LINK TO NEXT CHAPTER IN CONCLUSION
+                ?](#tensions-between-facilitating-agency-and-norming-practices---move-up-or-compress-into-this-chapter---or-as-a-link-to-next-chapter-in-conclusion)
     -   [Chapter Conclusion](#chapter-conclusion)
         -   [Simple table of uses](#simple-table-of-uses)
         -   [Summary of the pedagogical opportunities of Game Design
