--- a/_posts/thesis_chapters/tocs/2024-11-7-Culture.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-11-7-Culture.md_toc.md
@@ -2,11 +2,14 @@
     Learner
     Agency](#seeding-and-nurturing-community-game-making-practices-to-facilitate-learner-agency)
     -   [Research Questions Nov 2024](#research-questions-nov-2024)
+        -   [Notes on coding for this
+            chapter](#notes-on-coding-for-this-chapter)
     -   [Introduction](#introduction)
         -   [Notes on structure of the
             chapter](#notes-on-structure-of-the-chapter)
-    -   [Observations / Discussion on Playtesting as a cultural
-        process](#observations-discussion-on-playtesting-as-a-cultural-process)
+    -   [Observations on emerging idioculture and the role of
+        playtesting in
+        particular](#observations-on-emerging-idioculture-and-the-role-of-playtesting-in-particular)
         -   [Impact of Design on playtesting behaviours
             (RECAP)](#impact-of-design-on-playtesting-behaviours-recap)
         -   [Emerging use of narratives and graphics which drawing on
